View: Unify movie dialogs

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -73,27 +73,27 @@ BEGIN
     END
     POPUP "&Emulation"
     BEGIN
-        MENUITEM "&Pause",                       IDM_PAUSE, GRAYED
-        MENUITEM "&Frame Advance",               IDM_FRAMEADVANCE, GRAYED
-        MENUITEM "Take Sc&reenshot",             IDM_SCREENSHOT, GRAYED
+        MENUITEM "&Pause",                      IDM_PAUSE, GRAYED
+        MENUITEM "&Frame Advance",              IDM_FRAMEADVANCE, GRAYED
+        MENUITEM "Take Sc&reenshot",            IDM_SCREENSHOT, GRAYED
         MENUITEM SEPARATOR
-        MENUITEM "Save State",                 IDM_SAVE_SLOT, GRAYED
-        MENUITEM "Load State",              IDM_LOAD_SLOT, GRAYED
+        MENUITEM "Save State",                  IDM_SAVE_SLOT, GRAYED
+        MENUITEM "Load State",                  IDM_LOAD_SLOT, GRAYED
         MENUITEM "&Save State As...",           IDM_SAVE_STATE_AS, GRAYED
-        MENUITEM "&Load State...",               IDM_LOAD_STATE_AS, GRAYED
+        MENUITEM "&Load State...",              IDM_LOAD_STATE_AS, GRAYED
         MENUITEM SEPARATOR
         POPUP "Current Save S&tate"
         BEGIN
-            MENUITEM "Slot &1",                      IDM_SELECT_1, CHECKED
-            MENUITEM "Slot &2",                      IDM_SELECT_2
-            MENUITEM "Slot &3",                      IDM_SELECT_3
-            MENUITEM "Slot &4",                      IDM_SELECT_4
-            MENUITEM "Slot &5",                      IDM_SELECT_5
-            MENUITEM "Slot &6",                      IDM_SELECT_6
-            MENUITEM "Slot &7",                      IDM_SELECT_7
-            MENUITEM "Slot &8",                      IDM_SELECT_8
-            MENUITEM "Slot &9",                      IDM_SELECT_9
-            MENUITEM "Slot 1&0",                     IDM_SELECT_10
+            MENUITEM "Slot &1",                     IDM_SELECT_1, CHECKED
+            MENUITEM "Slot &2",                     IDM_SELECT_2
+            MENUITEM "Slot &3",                     IDM_SELECT_3
+            MENUITEM "Slot &4",                     IDM_SELECT_4
+            MENUITEM "Slot &5",                     IDM_SELECT_5
+            MENUITEM "Slot &6",                     IDM_SELECT_6
+            MENUITEM "Slot &7",                     IDM_SELECT_7
+            MENUITEM "Slot &8",                     IDM_SELECT_8
+            MENUITEM "Slot &9",                     IDM_SELECT_9
+            MENUITEM "Slot 1&0",                    IDM_SELECT_10
         END
     END
     POPUP "&Options"
@@ -115,11 +115,11 @@ BEGIN
     END
     POPUP "&Movie"
     BEGIN
-        MENUITEM "S&tart Movie Recording...",    IDM_START_MOVIE_RECORDING, GRAYED
-        MENUITEM "Stop Movie &Recording",        IDM_STOP_MOVIE_RECORDING, GRAYED
+        MENUITEM "S&tart Movie Recording...",   IDM_START_MOVIE_RECORDING, GRAYED
+        MENUITEM "Stop Movie &Recording",       IDM_STOP_MOVIE_RECORDING, GRAYED
         MENUITEM SEPARATOR
-        MENUITEM "Start Movie &Playback...",     IDM_START_MOVIE_PLAYBACK, GRAYED
-        MENUITEM "St&op Movie Playback",         IDM_STOP_MOVIE_PLAYBACK, GRAYED
+        MENUITEM "Start Movie &Playback...",    IDM_START_MOVIE_PLAYBACK, GRAYED
+        MENUITEM "St&op Movie Playback",        IDM_STOP_MOVIE_PLAYBACK, GRAYED
         MENUITEM SEPARATOR
         POPUP "Recent Movies"
         BEGIN
@@ -127,7 +127,7 @@ BEGIN
             MENUITEM "Freeze",                      IDM_FREEZE_RECENT_MOVIES
             MENUITEM SEPARATOR
         END
-        MENUITEM "&Load Latest Movie",           IDM_PLAY_LATEST_MOVIE
+        MENUITEM "&Load Latest Movie",          IDM_PLAY_LATEST_MOVIE
         MENUITEM SEPARATOR
         POPUP "Video Capture"
         BEGIN
@@ -139,14 +139,14 @@ BEGIN
             MENUITEM "Stop Capture",                IDM_STOP_CAPTURE
         END
         MENUITEM SEPARATOR
-        MENUITEM "Loop Movie Pl&ayback",         IDM_LOOP_MOVIE
-        MENUITEM "Toggle Read-Onl&y",            IDM_TOGGLE_READONLY
+        MENUITEM "Loop Movie Pl&ayback",        IDM_LOOP_MOVIE
+        MENUITEM "Toggle Read-Onl&y",           IDM_TOGGLE_READONLY
     END
     POPUP "&Utilities"
     BEGIN
-        MENUITEM "Show &RAM start...",           IDM_RAMSTART
+        MENUITEM "Show &RAM start...",          IDM_RAMSTART
         MENUITEM "Start &Trace Logger...",      IDM_TRACELOG
-        MENUITEM "&CoreDbg...",                  IDM_COREDBG
+        MENUITEM "&CoreDbg...",                 IDM_COREDBG
     END
     POPUP "&Help"
     BEGIN
@@ -154,7 +154,7 @@ BEGIN
     END
     POPUP "&Lua Script"
     BEGIN
-        MENUITEM "&New Instance...",             IDM_LOAD_LUA
+        MENUITEM "&New Instance...",            IDM_LOAD_LUA
         MENUITEM SEPARATOR
         POPUP "Recent Scripts"
         BEGIN
@@ -162,9 +162,9 @@ BEGIN
             MENUITEM "Freeze",                      IDM_FREEZE_RECENT_LUA
             MENUITEM SEPARATOR
         END
-        MENUITEM "Load &Latest Lua Script...",   IDM_LOAD_LATEST_LUA
+        MENUITEM "Load &Latest Lua Script...",  IDM_LOAD_LATEST_LUA
         MENUITEM SEPARATOR
-        MENUITEM "&Close All",                   IDM_CLOSE_ALL_LUA
+        MENUITEM "&Close All",                  IDM_CLOSE_ALL_LUA
     END
 END
 
@@ -323,8 +323,8 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,138,8
 END
 
-IDD_MOVIE_PLAYBACK_DIALOG DIALOGEX 0, 0, 342, 342
-STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_MOVIE_DIALOG DIALOGEX 0, 0, 342, 342
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Play Movie"
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
@@ -335,120 +335,47 @@ BEGIN
     EDITTEXT        IDC_PAUSEAT_FIELD,80,320,44,13,ES_AUTOHSCROLL | ES_NUMBER
     DEFPUSHBUTTON   "OK",IDC_OK,225,320,50,14
     PUSHBUTTON      "Cancel",IDC_CANCEL,281,320,50,14
-    GROUPBOX        "Movie Settings",IDC_ROM_HEADER_INFO_TEXT,9,118,153,195
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,23,139,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,23,151,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME,56,139,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY,56,151,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS,15,179,140,62
-    LTEXT           "Video:",IDC_GFXPLUGIN,23,191,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN,23,203,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN,23,215,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN,23,227,32,8
+    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,15,131,31,8
+    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,15,143,32,8
+    EDITTEXT        IDC_ROM_INTERNAL_NAME,48,131,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_ROM_COUNTRY,48,143,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Plugins",IDC_ROM_PLUGINS,7,171,140,62
+    LTEXT           "Video:",IDC_GFXPLUGIN,15,183,32,10
+    LTEXT           "Sound:",IDC_SOUNDPLUGIN,15,195,31,8
+    LTEXT           "Input:",IDC_INPUTPLUGIN,15,207,31,8
+    LTEXT           "RSP:",IDC_RSPPLUGIN,15,219,32,8
     LTEXT           "Pause at frame:",IDC_PAUSEAT_LABEL,23,323,52,10
     LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,16,22,40,8
     EDITTEXT        IDC_INI_AUTHOR,59,42,272,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_INI_DESCRIPTION,59,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT,23,163,31,8
-    EDITTEXT        IDC_ROM_CRC,56,163,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,16,127,139,50
+    LTEXT           "CRC:",IDC_ROM_CRC_TEXT,15,155,31,8
+    EDITTEXT        IDC_ROM_CRC,48,155,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,8,119,139,50
     LTEXT           "Author:",IDC_MOVIE_AUTHOR_TEXT,25,44,29,8
     LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,12,68,42,8
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT,56,191,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT,56,203,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT,56,215,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT,56,227,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS,15,245,140,62
-    LTEXT           "1:",IDC_CONTROLLER1,23,257,32,10
-    LTEXT           "2:",IDC_CONTROLLER2,23,269,31,8
-    LTEXT           "3:",IDC_CONTROLLER3,23,281,31,8
-    LTEXT           "4:",IDC_CONTROLLER4,23,293,32,8
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT,55,257,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,55,269,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,55,281,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,55,293,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Your Settings",IDC_ROM_HEADER_INFO_TEXT2,179,118,153,195
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT2,193,139,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT2,193,151,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME2,226,139,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY2,226,151,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS2,185,179,140,62
-    LTEXT           "Video:",IDC_GFXPLUGIN2,193,191,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN2,193,203,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN2,193,215,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN2,193,227,32,8
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT2,193,163,31,8
-    EDITTEXT        IDC_ROM_CRC3,226,163,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT2,186,127,139,50
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT2,226,191,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT2,226,203,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT2,226,215,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT2,226,227,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS2,185,245,140,62
-    LTEXT           "1:",IDC_CONTROLLER5,193,257,32,10
-    LTEXT           "2:",IDC_CONTROLLER6,193,269,31,8
-    LTEXT           "3:",IDC_CONTROLLER7,193,281,31,8
-    LTEXT           "4:",IDC_CONTROLLER8,193,293,32,8
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT2,225,257,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,225,269,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,225,281,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,225,293,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_VIDEO_TEXT,48,183,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_SOUND_TEXT,48,195,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_INPUT_TEXT,48,207,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RSP_TEXT,48,219,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS,7,237,140,62
+    LTEXT           "1:",IDC_CONTROLLER1,15,249,32,10
+    LTEXT           "2:",IDC_CONTROLLER2,15,261,31,8
+    LTEXT           "3:",IDC_CONTROLLER3,15,273,31,8
+    LTEXT           "4:",IDC_CONTROLLER4,15,285,32,8
+    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT,47,249,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,47,261,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,47,273,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,47,285,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,25,91,32,8
     LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,24,105,32,8
     LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,186,91,43,8
     EDITTEXT        IDC_MOVIE_LENGTH,58,91,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_FRAMES,58,105,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_RERECORDS,232,91,93,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Starts From:",IDC_STARTSFROM_LABEL,184,105,45,8
-    EDITTEXT        IDC_FROMSNAPSHOT_TEXT,232,105,56,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-END
-
-IDD_MOVIE_RECORD_DIALOG DIALOGEX 0, 0, 335, 251
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Record Movie"
-FONT 8, "MS Shell Dlg", 400, 0, 0x0
-BEGIN
-    EDITTEXT        IDC_INI_MOVIEFILE,54,20,272,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_INI_AUTHOR,54,42,272,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_INI_DESCRIPTION,54,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
-    PUSHBUTTON      "Save as...",IDC_MOVIE_BROWSE,276,3,50,14
-    DEFPUSHBUTTON   "OK",IDC_OK,220,230,50,14
-    PUSHBUTTON      "Cancel",IDC_CANCEL,276,230,50,14
-    LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,11,22,40,8
-    LTEXT           "Author:",IDC_MOVIE_AUTHOR_TEXT,20,44,29,8
-    LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,7,68,42,8
-    GROUPBOX        "Settings",IDC_ROM_HEADER_INFO_TEXT2,21,91,306,132
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT2,36,110,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT2,36,122,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME2,69,110,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY2,69,122,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS2,28,154,140,62
-    LTEXT           "Video:",IDC_GFXPLUGIN2,36,166,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN2,36,178,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN2,36,190,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN2,36,202,32,8
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT2,36,134,31,8
-    EDITTEXT        IDC_ROM_CRC3,69,134,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT2,29,100,139,50
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT2,69,166,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT2,69,178,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT2,69,190,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT2,69,202,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS2,177,154,140,62
-    LTEXT           "1:",IDC_CONTROLLER5,185,166,32,10
-    LTEXT           "2:",IDC_CONTROLLER6,185,178,31,8
-    LTEXT           "3:",IDC_CONTROLLER7,185,190,31,8
-    LTEXT           "4:",IDC_CONTROLLER8,185,202,32,8
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT2,217,166,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,217,178,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,217,190,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,217,202,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Start From",IDC_STARTFROM2,177,100,139,50
-    CONTROL         "Savestate",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,190,124,45,10
-    CONTROL         "Existing Savestate",IDC_FROMEXISTINGSNAPSHOT_RADIO,
-                    "Button",BS_AUTORADIOBUTTON,241,112,70,10
-    CONTROL         "Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,190,112,50,10
-    CONTROL         "EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,241,124,64,10
+    CONTROL         "Start",IDC_RADIO_FROM_START,"Button",BS_AUTORADIOBUTTON,166,122,32,10
+    CONTROL         "Savestate",IDC_RADIO_FROM_ST,"Button",BS_AUTORADIOBUTTON,165,132,49,10
+    CONTROL         "EEPROM",IDC_RADIO_FROM_EEPROM,"Button",BS_AUTORADIOBUTTON,165,145,43,10
+    CONTROL         "Existing Savestate",IDC_RADIO_FROM_EXISTING_ST,"Button",BS_AUTORADIOBUTTON,165,161,75,10
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
@@ -533,9 +460,9 @@ IDR_ACCEL ACCELERATORS
 BEGIN
     VK_RETURN,      ID_START_ROM_ENTER,     VIRTKEY 
     "P",            ID_POPUP_ROM_SETTING,   VIRTKEY, CONTROL
-    "R",            IDM_REFRESH_ROMBROWSER,    VIRTKEY, CONTROL, ALT
-    "T",            IDM_TOOLBAR,        VIRTKEY, ALT
-    "S",            IDM_STATUSBAR,      VIRTKEY, ALT
+    "R",            IDM_REFRESH_ROMBROWSER, VIRTKEY, CONTROL, ALT
+    "T",            IDM_TOOLBAR,            VIRTKEY, ALT
+    "S",            IDM_STATUSBAR,          VIRTKEY, ALT
 END
 
 
@@ -613,11 +540,7 @@ BEGIN
     BEGIN
     END
 
-    IDD_MOVIE_PLAYBACK_DIALOG, DIALOG
-    BEGIN
-    END
-
-    IDD_MOVIE_RECORD_DIALOG, DIALOG
+    IDD_MOVIE_DIALOG, DIALOG
     BEGIN
     END
 
@@ -659,11 +582,6 @@ BEGIN
     0
 END
 
-IDD_MOVIE_RECORD_DIALOG AFX_DIALOG_LAYOUT
-BEGIN
-    0
-END
-
 IDD_OTHER_OPTIONS_DIALOG AFX_DIALOG_LAYOUT
 BEGIN
     0
@@ -700,6 +618,11 @@ BEGIN
 END
 
 IDD_LUAWINDOW AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_MOVIE_DIALOG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
@@ -745,7 +668,8 @@ END
 
 STRINGTABLE
 BEGIN
-    IDM_START_MOVIE_RECORDING         "Starts AVI capture with previous codec and preset (avi.cfg)"
+    IDM_START_MOVIE_RECORDING 
+                            "Starts AVI capture with previous codec and preset (avi.cfg)"
 END
 
 #endif    // Neutral (Standard) resources
