View: Remove redundant options from movie dialog

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -323,59 +323,57 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,138,8
 END
 
-IDD_MOVIE_DIALOG DIALOGEX 0, 0, 342, 342
+IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 269
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Play Movie"
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    EDITTEXT        IDC_INI_MOVIEFILE,59,20,212,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "Browse...",IDC_MOVIE_BROWSE,281,19,50,14
-    PUSHBUTTON      "Refresh",IDC_MOVIE_REFRESH,281,3,50,14
-    CONTROL         "Open Read-Only",IDC_MOVIE_READONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,203,6,69,10
-    EDITTEXT        IDC_PAUSEAT_FIELD,80,320,44,13,ES_AUTOHSCROLL | ES_NUMBER
-    DEFPUSHBUTTON   "OK",IDC_OK,225,320,50,14
-    PUSHBUTTON      "Cancel",IDC_CANCEL,281,320,50,14
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,15,131,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,15,143,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME,48,131,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY,48,143,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS,7,171,140,62
-    LTEXT           "Video:",IDC_GFXPLUGIN,15,183,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN,15,195,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN,15,207,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN,15,219,32,8
-    LTEXT           "Pause at frame:",IDC_PAUSEAT_LABEL,23,323,52,10
-    LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,16,22,40,8
-    EDITTEXT        IDC_INI_AUTHOR,59,42,272,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_INI_DESCRIPTION,59,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT,15,155,31,8
-    EDITTEXT        IDC_ROM_CRC,48,155,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,8,119,139,50
-    LTEXT           "Author:",IDC_MOVIE_AUTHOR_TEXT,25,44,29,8
-    LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,12,68,42,8
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT,48,183,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT,48,195,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT,48,207,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT,48,219,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS,7,237,140,62
-    LTEXT           "1:",IDC_CONTROLLER1,15,249,32,10
-    LTEXT           "2:",IDC_CONTROLLER2,15,261,31,8
-    LTEXT           "3:",IDC_CONTROLLER3,15,273,31,8
-    LTEXT           "4:",IDC_CONTROLLER4,15,285,32,8
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT,47,249,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,47,261,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,47,273,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,47,285,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,25,91,32,8
-    LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,24,105,32,8
-    LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,186,91,43,8
-    EDITTEXT        IDC_MOVIE_LENGTH,58,91,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_FRAMES,58,105,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RERECORDS,232,91,93,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    CONTROL         "Start",IDC_RADIO_FROM_START,"Button",BS_AUTORADIOBUTTON,166,122,32,10
-    CONTROL         "Savestate",IDC_RADIO_FROM_ST,"Button",BS_AUTORADIOBUTTON,165,132,49,10
-    CONTROL         "EEPROM",IDC_RADIO_FROM_EEPROM,"Button",BS_AUTORADIOBUTTON,165,145,43,10
-    CONTROL         "Existing Savestate",IDC_RADIO_FROM_EXISTING_ST,"Button",BS_AUTORADIOBUTTON,165,161,75,10
+    EDITTEXT        IDC_INI_MOVIEFILE,61,6,212,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Browse...",IDC_MOVIE_BROWSE,283,4,50,14
+    EDITTEXT        IDC_PAUSEAT_FIELD,293,238,44,13,ES_AUTOHSCROLL | ES_NUMBER
+    DEFPUSHBUTTON   "OK",IDC_OK,236,252,50,14
+    PUSHBUTTON      "Cancel",IDC_CANCEL,292,252,50,14
+    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,16,94,31,8
+    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,16,105,32,8
+    EDITTEXT        IDC_ROM_INTERNAL_NAME,49,94,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_ROM_COUNTRY,49,105,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Plugins",IDC_ROM_PLUGINS,8,134,140,62
+    LTEXT           "Video:",IDC_GFXPLUGIN,16,145,32,10
+    LTEXT           "Sound:",IDC_SOUNDPLUGIN,16,158,31,8
+    LTEXT           "Input:",IDC_INPUTPLUGIN,16,169,31,8
+    LTEXT           "RSP:",IDC_RSPPLUGIN,16,182,32,8
+    LTEXT           "Pause at frame:",IDC_PAUSEAT_LABEL,236,240,52,10
+    LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,18,7,40,8
+    EDITTEXT        IDC_INI_AUTHOR,61,27,272,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_INI_DESCRIPTION,61,46,272,24,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
+    LTEXT           "CRC:",IDC_ROM_CRC_TEXT,16,118,31,8
+    EDITTEXT        IDC_ROM_CRC,49,118,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,9,81,139,50
+    LTEXT           "Author:",IDC_MOVIE_AUTHOR_TEXT,27,30,29,8
+    LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,14,54,42,8
+    EDITTEXT        IDC_MOVIE_VIDEO_TEXT,49,145,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_SOUND_TEXT,49,158,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_INPUT_TEXT,49,169,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RSP_TEXT,49,182,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS,8,199,140,62
+    LTEXT           "1:",IDC_CONTROLLER1,16,211,32,10
+    LTEXT           "2:",IDC_CONTROLLER2,16,223,31,8
+    LTEXT           "3:",IDC_CONTROLLER3,16,235,31,8
+    LTEXT           "4:",IDC_CONTROLLER4,16,247,32,8
+    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT,48,211,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,48,223,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,48,235,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,48,247,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,157,82,36,14
+    LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,157,106,36,12
+    LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,157,130,36,12
+    EDITTEXT        IDC_MOVIE_LENGTH,199,82,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_FRAMES,199,106,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RERECORDS,199,130,97,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    CONTROL         "Start",IDC_RADIO_FROM_START,"Button",BS_AUTORADIOBUTTON,157,148,78,8
+    CONTROL         "Savestate",IDC_RADIO_FROM_ST,"Button",BS_AUTORADIOBUTTON,157,160,78,8
+    CONTROL         "EEPROM",IDC_RADIO_FROM_EEPROM,"Button",BS_AUTORADIOBUTTON,157,172,78,8
+    CONTROL         "Existing Savestate",IDC_RADIO_FROM_EXISTING_ST,"Button",BS_AUTORADIOBUTTON,157,184,78,10
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
@@ -542,6 +540,7 @@ BEGIN
 
     IDD_MOVIE_DIALOG, DIALOG
     BEGIN
+        RIGHTMARGIN, 342
     END
 
     IDD_ROM_SETTING_DIALOG, DIALOG
