View: Add start types to movie dialog, fix close cancel

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -332,7 +332,7 @@ BEGIN
     PUSHBUTTON      "Browse...",IDC_MOVIE_BROWSE,283,4,50,14
     EDITTEXT        IDC_PAUSEAT_FIELD,293,238,44,13,ES_AUTOHSCROLL | ES_NUMBER
     DEFPUSHBUTTON   "OK",IDC_OK,236,252,50,14
-    PUSHBUTTON      "Cancel",IDC_CANCEL,292,252,50,14
+    PUSHBUTTON      "Cancel",IDC_CANCEL,293,252,50,14
     LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,16,94,31,8
     LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,16,105,32,8
     EDITTEXT        IDC_ROM_INTERNAL_NAME,49,94,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
@@ -364,16 +364,18 @@ BEGIN
     EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,48,223,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,48,235,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,48,247,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,157,82,36,14
-    LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,157,106,36,12
-    LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,157,130,36,12
-    EDITTEXT        IDC_MOVIE_LENGTH,199,82,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_FRAMES,199,106,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RERECORDS,199,130,97,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    CONTROL         "Start",IDC_RADIO_FROM_START,"Button",BS_AUTORADIOBUTTON,157,148,78,8
-    CONTROL         "Savestate",IDC_RADIO_FROM_ST,"Button",BS_AUTORADIOBUTTON,157,160,78,8
-    CONTROL         "EEPROM",IDC_RADIO_FROM_EEPROM,"Button",BS_AUTORADIOBUTTON,157,172,78,8
-    CONTROL         "Existing Savestate",IDC_RADIO_FROM_EXISTING_ST,"Button",BS_AUTORADIOBUTTON,157,184,78,10
+    LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,159,96,36,14
+    LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,159,120,36,12
+    LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,159,144,36,12
+    EDITTEXT        IDC_MOVIE_LENGTH,201,96,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_FRAMES,201,120,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RERECORDS,201,144,97,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    CONTROL         "Start",IDC_RADIO_FROM_START,"Button",BS_AUTORADIOBUTTON,165,178,78,8
+    CONTROL         "Savestate",IDC_RADIO_FROM_ST,"Button",BS_AUTORADIOBUTTON,165,190,78,8
+    CONTROL         "EEPROM",IDC_RADIO_FROM_EEPROM,"Button",BS_AUTORADIOBUTTON,165,202,78,8
+    CONTROL         "Existing Savestate",IDC_RADIO_FROM_EXISTING_ST,"Button",BS_AUTORADIOBUTTON,165,214,78,10
+    GROUPBOX        "Start from",IDC_GROUP_START_FROM,153,168,127,67
+    GROUPBOX        "Start from",IDC_GROUP_START_FROM2,153,84,165,80
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
@@ -540,7 +542,6 @@ BEGIN
 
     IDD_MOVIE_DIALOG, DIALOG
     BEGIN
-        RIGHTMARGIN, 342
     END
 
     IDD_ROM_SETTING_DIALOG, DIALOG
