add MovieDialog.h and MovieDialog.cpp to CMakeLists.txt

--- a/winproject/mupen64/CMakeLists.txt
+++ b/winproject/mupen64/CMakeLists.txt
@@ -156,6 +156,7 @@ set(Headers
     "../../main/win/configdialog.h"
     "../../main/win/features/CoreDbg.h"
     "../../main/win/features/CrashHelper.h"
+    "../../main/win/features/MovieDialog.h"
     "../../main/win/features/RomBrowser.hpp"
     "../../main/win/features/Statusbar.hpp"
     "../../main/win/features/Toolbar.hpp"
@@ -210,6 +211,7 @@ set(Sources
     "../../main/win/configdialog.cpp"
     "../../main/win/features/CoreDbg.cpp"
     "../../main/win/features/CrashHelper.cpp"
+    "../../main/win/features/MovieDialog.cpp"
     "../../main/win/features/rombrowser.cpp"
     "../../main/win/features/Statusbar.cpp"
     "../../main/win/features/Toolbar.cpp"
